# melfa_robot

./: README.md
ros2_ws/ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/ros2_ws/log/: latest_build
ros2_ws/ros2_ws/src/keyence_plc_driver/: setup.py
ros2_ws/src/keyence_plc_driver/: CMakeLists.txt
ros2_ws/src/keyence_plc_driver/scripts/: AGV_control.py  ros2_bridge_recv_pc.py  ros2_bridge_send_pc.py
ros_catkin_ws/: launch.sh  libboost1.71-all-dev_1.71.0-6ubuntu6_amd64.deb  noetic-desktop.rosinstall  test_plc_random.py  test_plc_raw.py  test_plc_raw_variations.py
ros_catkin_ws/AGV_route/: test1.json
ros_catkin_ws/devel/: .catkin  local_setup.sh  setup.fish  setup.sh
ros_catkin_ws/src/keyence_plc_driver/: CMakeLists.txt
ros_catkin_ws/src/keyence_plc_driver/launch/: joint_controller.launch
ros_catkin_ws/src/keyence_plc_driver/scripts/: 3.py  AGV_control.py  PLCconncectionProtocol.py  camera_output.py  camera_output_opencv.py  forward_kinematic_test.py  joint_controller.py  joint_controller2.py  joint_controller3.py  joint_controller4.py  joint_controller5.py  joint_controller6.py  joint_controller7.py  joint_controller_final.py  joint_state.py  kinematic_test.py  kvh_gui02.py  lrtb2000c_driver.py  monitor.py  monitor2.py  monitor3.py  monitor4.py  monitor5.py  monitor_final.py  ps4_reader.py  robot_control.py  robot_teaching.py  ros1_bridge_recv_docker.py  ros1_bridge_send_docker.py
ros_catkin_ws/src/keyence_plc_driver/src/keyence_plc_ethernet_driver/: ethernet_driver.py
ros_catkin_ws/teach_robot/: test1.json  test2.json
(+31 files in other folders)
